--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
         <section id="main_content">
           <p>剧周边是专门做影视剧周边产品的app。
-一部你喜爱的影视剧or你喜欢的明星身上，有多少你深爱却又在生活中找不到的单品？想在现实生活中也跟影视剧一样精彩纷呈？剧周边满足你一切愿望。</p>
+一部你喜爱的影视剧or你喜欢的明星身上，有多少你深爱却又在生活中找不到的单品？想在现实生活中也跟影视剧一样精彩纷呈？剧周边满足你一切愿望。
+下载地址<a href="http://www.anzhi.com/soft_2364611.html">http://www.anzhi.com/soft_2364611.html</a></p>
         </section>
 
         <footer>
